--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
   <link rel="stylesheet" href="css/owl.carousel.css">
   <link rel="stylesheet" href="css/owl.theme.css">
   <link rel="stylesheet" href="css/layout.css">
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.cookie.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
 </head>
 
 <body>
@@ -201,6 +196,7 @@
     </div>
     <!--轮播、主体-->
     <!--风车按钮-->
+
     <div id="changeBgImg">
       <div class="row" style="padding:0;margin:0;">
         <div class="col-md-12">
@@ -208,10 +204,17 @@
         </div>
       </div>
     </div>
+
     <!--风车按钮-->
   </div>
   <!--包裹层-->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <!--  <script src="js/owl.carousel.min.js"></script-->
+  <script src="js/jquery.cookie.js"></script>
+
   <script src="js/my.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
   <script>
     $(document).ready(function () {
       $("#slider").owlCarousel({
