--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="css/owl.carousel.css">
   <link rel="stylesheet" href="css/owl.theme.css">
   <link rel="stylesheet" href="css/layout.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
@@ -115,12 +118,8 @@
             </div>
           </div>
         </div>
-        <!-- 小图标包裹层-->
-
-
-
-
         <!-- 小图标包裹层1-->
+        <!-- 小图标包裹层2-->
         <div class="item">
           <!-- 第一行小图标-->
           <div class="row col-xs-offset-2 col-sm-offset-2 col-md-offset-2 icon-first-line item">
@@ -190,9 +189,8 @@
             </div>
           </div>
         </div>
-        <!-- 小图标包裹层-->
+        <!-- 小图标包裹层2-->
       </div>
-
     </div>
     <!--轮播、主体-->
     <!--风车按钮-->
@@ -208,15 +206,11 @@
     <!--风车按钮-->
   </div>
   <!--包裹层-->
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <!--  <script src="js/owl.carousel.min.js"></script-->
-  <script src="js/jquery.cookie.js"></script>
-
   <script src="js/my.js"></script>
   <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.cookie.js"></script>
   <script>
-    $(document).ready(function () {
+    $(function () {
       $("#slider").owlCarousel({
         items: 1,
         itemsDesktop: [1200, 1],
