暂时先添加风车把手

--- a/index.html
+++ b/index.html
@@ -2,224 +2,225 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>新版</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/owl.carousel.css">
-  <link rel="stylesheet" href="css/owl.theme.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>新版</title>
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/owl.carousel.css">
+	<link rel="stylesheet" href="css/owl.theme.css">
+	<link rel="stylesheet" href="css/layout.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 
 </head>
 
 <body>
-  <!--包裹层-->
-  <div id="wrap">
-    <!--导航-->
-    <div class="container">
-      <div class="row">
-        <ul id="OUl" class="nav nav-pills center-block text-center">
-          <li><a class="a-active" href="#">网页</a></li>
-          <li><a href="#">图片</a></li>
-          <li><a href="#">新闻</a></li>
-          <li><a href="#">音乐</a></li>
-          <li><a href="#">视频</a></li>
-          <li><a href="#">地图</a></li>
-        </ul>
-      </div>
-    </div>
-    <!--导航-->
-    <!--搜索框-->
-    <div id="search-bar">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-12">
-            <div class="search-wrap center-block">
-              <input type="text" placeholder="搜索">
-              <input type="text">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!--搜索框-->
-    <!--轮播、主体-->
-    <div id="main">
-      <div class="container" id="slider">
-        <!-- 小图标包裹层1-->
-        <div class="item">
-          <!-- 第一行小图标-->
-          <div class="row col-xs-offset-2 col-sm-offset-2 col-md-offset-2 icon-first-line item">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-2.png" alt="">
-                <p class="text-center">正在定位...</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-3.png" alt="">
-                <p class="text-center">待办事项</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-4.png" alt="">
-                <p class="text-center">应用</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-5.png" alt="">
-                <p class="text-center">笔记与创意</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-6.png" alt="">
-                <p class="text-center">书签</p>
-              </div>
-            </div>
-          </div>
-          <!-- 第一行小图标-->
-          <!--第二行小图标-->
-          <div class="row col-xs-offset-2 col-sm-offset-2 col-md-offset-2 icon-first-line item">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-7.png" alt="">
-                <p class="text-center">Gmail</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-8.png" alt="">
-                <p class="text-center">Ebay</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-9.png" alt="">
-                <p class="text-center">京东商城</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-10.png" alt="">
-                <p class="text-center">设置</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-1.png" alt="">
-                <p class="text-center">历史记录</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- 小图标包裹层1-->
-        <!-- 小图标包裹层2-->
-        <div class="item">
-          <!-- 第一行小图标-->
-          <div class="row col-xs-offset-2 col-sm-offset-2 col-md-offset-2 icon-first-line item">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-2.png" alt="">
-                <p class="text-center">正在定位...</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-3.png" alt="">
-                <p class="text-center">待办事项</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-4.png" alt="">
-                <p class="text-center">应用</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-5.png" alt="">
-                <p class="text-center">笔记与创意</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-6.png" alt="">
-                <p class="text-center">书签</p>
-              </div>
-            </div>
-          </div>
-          <!-- 第一行小图标-->
-          <!--第二行小图标-->
-          <div class="row col-xs-offset-2 col-sm-offset-2 col-md-offset-2 icon-first-line item">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-7.png" alt="">
-                <p class="text-center">Gmail</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-8.png" alt="">
-                <p class="text-center">Ebay</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-9.png" alt="">
-                <p class="text-center">京东商城</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-10.png" alt="">
-                <p class="text-center">设置</p>
-              </div>
-            </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <div class="save-img">
-                <img class="img-circle center-block" src="img/dis-1.png" alt="">
-                <p class="text-center">历史记录</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- 小图标包裹层2-->
-      </div>
-    </div>
-    <!--轮播、主体-->
-    <!--风车按钮-->
+	<!--包裹层-->
+	<div id="wrap">
+		<!--导航-->
+		<div class="container">
+			<div class="row">
+				<ul id="OUl" class="nav nav-pills center-block text-center">
+					<li><a class="a-active" href="#">网页</a></li>
+					<li><a href="#">图片</a></li>
+					<li><a href="#">新闻</a></li>
+					<li><a href="#">音乐</a></li>
+					<li><a href="#">视频</a></li>
+					<li><a href="#">地图</a></li>
+				</ul>
+			</div>
+		</div>
+		<!--导航-->
+		<!--搜索框-->
+		<div id="search-bar">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-md-12 col-lg-12">
+						<div class="search-wrap center-block">
+							<input type="text" placeholder="搜索">
+							<input type="text">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--搜索框-->
+		<!--轮播、主体-->
+		<div id="main">
+			<div class="container" id="slider">
+				<!-- 小图标包裹层1-->
+				<div class="item">
+					<!-- 第一行小图标-->
+					<div class="row col-xs-offset-2 col-sm-offset-2 col-md-offset-2 icon-first-line item">
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-2.png" alt="">
+								<p class="text-center">正在定位...</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-3.png" alt="">
+								<p class="text-center">待办事项</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-4.png" alt="">
+								<p class="text-center">应用</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-5.png" alt="">
+								<p class="text-center">笔记与创意</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-6.png" alt="">
+								<p class="text-center">书签</p>
+							</div>
+						</div>
+					</div>
+					<!-- 第一行小图标-->
+					<!--第二行小图标-->
+					<div class="row col-xs-offset-2 col-sm-offset-2 col-md-offset-2 icon-first-line item">
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-7.png" alt="">
+								<p class="text-center">Gmail</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-8.png" alt="">
+								<p class="text-center">Ebay</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-9.png" alt="">
+								<p class="text-center">京东商城</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-10.png" alt="">
+								<p class="text-center">设置</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-1.png" alt="">
+								<p class="text-center">历史记录</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- 小图标包裹层1-->
+				<!-- 小图标包裹层2-->
+				<div class="item">
+					<!-- 第一行小图标-->
+					<div class="row col-xs-offset-2 col-sm-offset-2 col-md-offset-2 icon-first-line item">
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-2.png" alt="">
+								<p class="text-center">正在定位...</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-3.png" alt="">
+								<p class="text-center">待办事项</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-4.png" alt="">
+								<p class="text-center">应用</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-5.png" alt="">
+								<p class="text-center">笔记与创意</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-6.png" alt="">
+								<p class="text-center">书签</p>
+							</div>
+						</div>
+					</div>
+					<!-- 第一行小图标-->
+					<!--第二行小图标-->
+					<div class="row col-xs-offset-2 col-sm-offset-2 col-md-offset-2 icon-first-line item">
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-7.png" alt="">
+								<p class="text-center">Gmail</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-8.png" alt="">
+								<p class="text-center">Ebay</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-9.png" alt="">
+								<p class="text-center">京东商城</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-10.png" alt="">
+								<p class="text-center">设置</p>
+							</div>
+						</div>
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+							<div class="save-img">
+								<img class="img-circle center-block" src="img/dis-1.png" alt="">
+								<p class="text-center">历史记录</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- 小图标包裹层2-->
+			</div>
+		</div>
+		<!--轮播、主体-->
+		<!--风车按钮-->
 
-    <div id="changeBgImg">
-      <div class="row" style="padding:0;margin:0;">
-        <div class="col-md-12">
-          <img class="btn-img pull-right" src="img/fengche.png" alt="切换按钮加载失败" title="单击切换壁纸">
-        </div>
-      </div>
-    </div>
+		<div id="changeBgImg">
+			<div class="row" style="padding:0;margin:0;">
+				<div class="col-md-12">
+					<img class="btn-img pull-right" src="img/fengche.png" alt="切换按钮加载失败" title="单击切换壁纸">
+					<div id="fengchegan"></div>
+				</div>
+			</div>
+		</div>
 
-    <!--风车按钮-->
-  </div>
-  <!--包裹层-->
-  <script src="js/my.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.cookie.js"></script>
-  <script>
-    $(function () {
-      $("#slider").owlCarousel({
-        items: 1,
-        itemsDesktop: [1200, 1],
-        itemsDesktopSmall: [979, 1],
-        itemsTablet: [768, 1],
-        itemsMobile: [479, 1]
-      });
-    });
-  </script>
+		<!--风车按钮-->
+	</div>
+	<!--包裹层-->
+	<script src="js/my.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/jquery.cookie.js"></script>
+	<script>
+		$(function () {
+			$("#slider").owlCarousel({
+				items: 1,
+				itemsDesktop: [1200, 1],
+				itemsDesktopSmall: [979, 1],
+				itemsTablet: [768, 1],
+				itemsMobile: [479, 1]
+			});
+		});
+	</script>
 </body>
 
 </html>
