have some problems

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/owl.theme.css">
 	<link rel="stylesheet" href="css/layout.css">
+	<link rel="stylesheet" href="css/side.css">
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-
 </head>
 
 <body>
@@ -207,6 +207,14 @@
 		<!--风车按钮-->
 	</div>
 	<!--包裹层-->
+	<!--	侧边弹出栏-->
+	<input type='checkbox' id='sideToggle'>
+	<aside>
+	</aside>
+	<div id='wrap-side'>
+		<label id='sideMenuControl' for='sideToggle'>=</label>
+	</div>
+	<!--	侧边弹出栏-->
 	<script src="js/my.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/jquery.cookie.js"></script>
