进度缓慢 非常慢。。。

--- a/index.html
+++ b/index.html
@@ -213,6 +213,13 @@
 		<div class="asideTitle">
 			<div class="topMenu">添加</div>
 		</div>
+		<div class="search-border">
+			<input type="search" placeholder="网址">
+			<input type="search" placeholder="名称">
+		</div>
+		<div id="mycanvas">
+
+		</div>
 	</aside>
 	<div id='wrap-side'>
 		<label id='sideMenuControl' for='sideToggle'>=</label>
