圆形绘制完成

--- a/index.html
+++ b/index.html
@@ -217,8 +217,11 @@
 			<input type="search" placeholder="网址">
 			<input type="search" placeholder="名称">
 		</div>
-		<div id="mycanvas">
+		<canvas id="mycanvas" width="150px" height="120px">
 
+		</canvas>
+		<div id="previewName">
+			名称
 		</div>
 	</aside>
 	<div id='wrap-side'>
