色板基本形态

--- a/index.html
+++ b/index.html
@@ -223,6 +223,20 @@
 		<div id="previewName">
 			名称
 		</div>
+		<div id="iconBgColor">
+			<div class="iconBgColor" style="background-color: rgb(26, 188, 156); border-color: rgb(26, 188, 156);"></div>
+			<div class="iconBgColor" style="background-color: rgb(46, 204, 113); border-color: transparent;"></div>
+			<div class="iconBgColor" style="background-color: rgb(51, 197, 197); border-color: transparent;"></div>
+			<div class="iconBgColor" style="background-color: rgb(52, 152, 219); border-color: transparent;"></div>
+			<div class="iconBgColor" style="background-color: rgb(155, 89, 182); border-color: transparent;"></div>
+			<div class="iconBgColor" style="background-color: rgb(52, 73, 94); border-color: transparent;"></div>
+			<div class="iconBgColor" style="background-color: rgb(241, 196, 15); border-color: transparent;"></div>
+			<div class="iconBgColor" style="background-color: rgb(230, 126, 34); border-color: transparent;"></div>
+			<div class="iconBgColor" style="background-color: rgb(231, 76, 60); border-color: transparent;"></div>
+			<div class="iconBgColor" style="background-color: rgb(149, 165, 166); border-color: transparent;"></div>
+			<div class="iconBgColor" style="" id="colorPicker" show="false"></div>
+			<div class="iconBgColor" style="" id="colorTransparent"></div>
+		</div>
 	</aside>
 	<div id='wrap-side'>
 		<label id='sideMenuControl' for='sideToggle'>=</label>
