弹出框布局完成

--- a/index.html
+++ b/index.html
@@ -237,9 +237,12 @@
 			<div class="iconBgColor" style="" id="colorPicker" show="false"></div>
 			<div class="iconBgColor" style="" id="colorTransparent"></div>
 		</div>
+		<div id="addBtn">
+			<input type="button" value="添加">
+		</div>
 	</aside>
 	<div id='wrap-side'>
-		<label id='sideMenuControl' for='sideToggle'>=</label>
+		<label id='sideMenuControl' class="" for='sideToggle'></label>
 	</div>
 	<!--	侧边弹出栏-->
 	<script src="js/my.js"></script>
