--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/owl.theme.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/side.css">
+  <link rel="stylesheet" href="css/mymodal.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
 </head>
@@ -245,6 +246,39 @@
     <label id='sideMenuControl' class="" for='sideToggle'></label>
   </div>
   <!--	侧边弹出栏-->
+  <!--  modal-->
+
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Large modal</button>
+
+  <div class="modal fade bs-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title" id="myModalLabel">这里放标题</h4>
+        </div>
+        <div class="modal-body">
+          <form role="form" action="">
+            <div class="form-group">
+              <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+              <textarea rows="10" class="form-control"></textarea>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+          <button type="button" class="btn btn-primary">保存</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--  modal-->
   <script src="js/my.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/jquery.cookie.js"></script>
@@ -256,6 +290,13 @@
         itemsDesktopSmall: [979, 1],
         itemsTablet: [768, 1],
         itemsMobile: [479, 1]
+      });
+    });
+  </script>
+  <script>
+    $(function () {
+      $(".save-img img").click(function () {
+        $("#myModal").modal();
       });
     });
   </script>
