关于搜索框的小更新

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12">
             <div class="search-wrap center-block">
-              <input type="text" placeholder="搜索">
-              <input type="text">
+              <input type="text" placeholder="搜索" id="infinitySearch">
+              <label for="infinitySearch" id="searchButton"></label>
             </div>
           </div>
         </div>
